# benchmark-data-pipeline

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: app.py
src/etl/: __main__.py  etl_pipeline.py  utils.py
