[project]
name = "benchmark-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "polars>=1.35.1",
    "pyarrow>=21.0.0",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.4",
    "mypy>=1.3.0",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disable_error_code = ["attr-defined"]
