[project]
name = "benchmark-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "datasets>=4.4.1",
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.4",
    "mypy>=1.3.0",
    "deptry>=0.23.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disable_error_code = ["attr-defined"]

[tool.deptry]
known_first_party = ["etl"]
